# custom_error

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs
tests/: tests.rs
