[package]
name = "custom_error"
description = "Define custom errors without boilerplate using the custom_error! macro."
version = "1.5.0"
authors = ["lovasoa"]
license = "BSD-2-Clause"
homepage = "https://github.com/lovasoa/custom_error"
repository = "https://github.com/lovasoa/custom_error"
readme = "README.md"
categories = ["rust-patterns", "development-tools", "encoding"]
keywords = ["error", "failure", "macro"]
documentation = "https://docs.rs/custom_error"

[dependencies]

[badges]
travis-ci = { repository = "lovasoa/custom_error", branch = "master" }
