[package]
name = "custom_error"
description = "Define custom errors without boilerplate using the custom_error! macro."
version = "1.8.0"
authors = ["lovasoa"]
license = "BSD-2-Clause"
homepage = "https://github.com/lovasoa/custom_error"
repository = "https://github.com/lovasoa/custom_error"
readme = "README.md"
categories = ["rust-patterns", "development-tools", "encoding"]
keywords = ["error", "failure", "macro"]
documentation = "https://docs.rs/custom_error"
edition='2018'

[dependencies]

[badges]
travis-ci = { repository = "lovasoa/custom_error", branch = "master" }

[features]
default = ["std"]
# Disable std for use in no_std context.
std = []
# Enable allocator_api and try_reserve, to define Error trait
# for unstable `AllocError` and `TryReserveError` in no-std
unstable = []
